<resources>
    <string name="app_name">LinguaLyrics_android</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Vestibulum mattis ullamcorper velit sed. Ac odio tempor orci dapibus ultrices in iaculis nunc sed. Massa ultricies mi quis hendrerit dolor magna eget est. Velit scelerisque in dictum non consectetur a. Faucibus purus in massa tempor. Fermentum posuere urna nec tincidunt praesent semper feugiat. Euismod elementum nisi quis eleifend quam adipiscing vitae. Orci dapibus ultrices in iaculis nunc sed augue lacus. Turpis massa sed elementum tempus egestas sed sed. Condimentum mattis pellentesque id nibh tortor. Morbi blandit cursus risus at ultrices mi. Pretium quam vulputate dignissim suspendisse in est ante in. Odio morbi quis commodo odio aenean sed. Vestibulum lectus mauris ultrices eros in cursus turpis massa. Velit dignissim sodales ut eu. Viverra orci sagittis eu volutpat odio facilisis. Eros donec ac odio tempor. Potenti nullam ac tortor vitae purus faucibus ornare suspendisse sed. Facilisis gravida neque convallis a cras semper auctor neque vitae. Facilisis magna etiam tempor orci eu lobortis elementum nibh. Nec ultrices dui sapien eget mi proin sed libero enim. Ut ornare lectus sit amet est placerat. Sed tempus urna et pharetra pharetra massa massa ultricies mi. Dui vivamus arcu felis bibendum ut tristique et egestas. Varius duis at consectetur lorem donec massa sapien. Ut pharetra sit amet aliquam id. Aliquam etiam erat velit scelerisque in. Volutpat diam ut venenatis tellus in metus. At urna condimentum mattis pellentesque id nibh tortor id aliquet. Eget duis at tellus at. Id semper risus in hendrerit gravida rutrum. Et molestie ac feugiat sed. Accumsan in nisl nisi scelerisque eu ultrices vitae auctor eu. Augue interdum velit euismod in pellentesque massa placerat duis ultricies. Id porta nibh venenatis cras sed. Sed sed risus pretium quam vulputate dignissim suspendisse. Eu consequat ac felis donec et odio. Quis risus sed vulputate odio ut enim. Ut lectus arcu bibendum at varius. Ridiculus mus mauris vitae ultricies leo integer malesuada nunc vel. Purus semper eget duis at tellus at urna condimentum. Tortor aliquam nulla facilisi cras fermentum odio eu feugiat. Tristique senectus et netus et malesuada fames ac. Ut morbi tincidunt augue interdum velit. Sed viverra tellus in hac habitasse platea dictumst vestibulum. Scelerisque felis imperdiet proin fermentum leo. Augue mauris augue neque gravida in fermentum et sollicitudin. Mauris vitae ultricies leo integer malesuada. Augue lacus viverra vitae congue eu consequat. Sollicitudin ac orci phasellus egestas tellus rutrum tellus. Eu ultrices vitae auctor eu. At elementum eu facilisis sed odio morbi quis commodo. Duis ultricies lacus sed turpis tincidunt. Laoreet sit amet cursus sit amet dictum sit amet. Bibendum arcu vitae elementum curabitur vitae nunc sed velit. Nunc lobortis mattis aliquam faucibus purus in. Non pulvinar neque laoreet suspendisse interdum consectetur. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Nam aliquam sem et tortor consequat id porta nibh venenatis. Ligula ullamcorper malesuada proin libero. Semper feugiat nibh sed pulvinar proin gravida. Erat nam at lectus urna duis convallis convallis tellus. Adipiscing vitae proin sagittis nisl rhoncus. Elementum pulvinar etiam non quam lacus suspendisse. A pellentesque sit amet porttitor eget. In pellentesque massa placerat duis ultricies lacus sed turpis. Morbi tempus iaculis urna id. Arcu ac tortor dignissim convallis aenean et tortor at risus. Vulputate eu scelerisque felis imperdiet. Posuere morbi leo urna molestie at elementum eu. Nisl tincidunt eget nullam non nisi est sit. Mauris vitae ultricies leo integer malesuada nunc vel risus. Et netus et malesuada fames ac turpis egestas maecenas. Lobortis elementum nibh tellus molestie nunc non blandit massa. In ornare quam viverra orci sagittis eu volutpat odio. Convallis aenean et tortor at risus. Eu non diam phasellus vestibulum lorem. Vel turpis nunc eget lorem dolor sed. Cras ornare arcu dui vivamus arcu felis bibendum. Sed libero enim sed faucibus. Varius vel pharetra vel turpis nunc eget.</string>
    <string name="search">search</string>

    <!--Fragment names-->
    <string name="lingua_lyrics">Lingua Lyrics</string>
    <string name="recent_lyrics">Recent Lyrics</string>
    <string name="saved_lyrics">Saved Lyrics</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <string name="lyric_not_found">No lyric found</string>
    
    <!--About Fragment-->
    <string name="about_name">Lingua Lyrics</string>
    <string name="about_description">Open source lyric app for android</string>
    <string name="about_developer">Developer: Habib Kazemi</string>
    <string name="about_source_code">Source Code:</string>
    <string name="about_source_code_link">https://github.com/LinguaPlayer/LinguaLyrics-for-android</string>


</resources>
